<resources>
    <!-- Note, app_name is generated by gradle -->
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_clear">Clear</string>
    <string name="menu_item_settings">Settings</string>
    <string name="updated">Updated</string>

    <string name="settings_app_version">App Version</string>
    <string name="pref_app_version" translatable="false">pref_app_version</string>

    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="pref_privacy_policy" translatable="false">pref_priv_policy</string>
    <string name="privacy_policy_url" translatable="false">https://jhavatar.github.io/bitcoin_calculator_luno/privacy_policy</string>

    <string name="settings_github">GitHub</string>
    <string name="pref_github" translatable="false">pref_github</string>
    <string name="github_url" translatable="false">https://github.com/jhavatar/bitcoin_calculator_luno</string>
</resources>
