<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        persistent="false"
        android:title="@string/settings_app_version"
        android:key="@string/pref_app_version"
        android:enabled="false"
        app:iconSpaceReserved="false"
        />

    <Preference
        persistent="false"
        android:title="@string/settings_github"
        android:key="@string/pref_github"
        android:icon="@drawable/ic_github"
        />

    <Preference
        persistent="false"
        android:title="@string/settings_privacy_policy"
        android:key="@string/pref_privacy_policy"
        android:icon="@drawable/ic_lock_outline_black_24dp"
        />

</PreferenceScreen>